configured for heroku

--- a/build.gradle
+++ b/build.gradle
@@ -29,5 +29,12 @@ dependencies {
 
 }
 
+tasks.withType(JavaCompile) {
+  options.encoding = "UTF-8"
+}
+
+task stage(dependsOn: ['clean', 'installDist'])
+installDist.mustRunAfter clean
+
 group = 'hexlet.code'
 version = '1.0-SNAPSHOT'
