--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ repositories {
 }
 
 dependencies {
+
     implementation 'io.javalin:javalin:4.6.4'
     implementation 'org.slf4j:slf4j-simple:1.7.36'
 
@@ -44,9 +45,8 @@ dependencies {
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.1.0'
     implementation 'org.webjars:bootstrap:5.1.3'
 
-
-
     implementation 'com.h2database:h2:2.1.214'
+    implementation 'org.postgresql:postgresql:42.3.3'
 }
 
 tasks.withType(JavaCompile) {
