--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,8 +3,8 @@
 datasource:
   default: ${APP_ENV}
   development:
-    username: sa
-    password: sa
+    username: ""
+    password: ""
     url: "jdbc:h2:./page_analyzer"
   production:
     username: ${JDBC_DATABASE_USERNAME}
@@ -16,5 +16,4 @@ ebean:
     run: true
     generate: true
     seedSql: seed.sql
-  migration:
-    run: true
+    
