--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,6 @@ repositories {
 }
 
 dependencies {
-
-
     implementation 'io.javalin:javalin:4.6.4'
     implementation 'org.slf4j:slf4j-simple:1.7.36'
 
@@ -52,10 +50,6 @@ dependencies {
     implementation 'com.h2database:h2:2.1.214'
     implementation 'org.postgresql:postgresql:42.3.3'
 
-    //testImplementation(
-    //        'org.assertj:assertj-core:3.23.1',
-    //        'org.junit.jupiter:junit-jupiter:5.8.2',
-    //)
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
     testCompileOnly 'junit:junit:4.13.2'
@@ -64,14 +58,10 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
     testImplementation 'com.konghq:unirest-java:3.13.6'
     testImplementation 'io.ebean:ebean-test:12.11.5'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.2'
 
     implementation 'com.konghq:unirest-java:3.13.6'
     implementation 'org.jsoup:jsoup:1.15.2'
-    //testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
-    //testImplementation 'org.assertj:assertj-core:3.22.0'
-    //testCompileOnly 'junit:junit:4.13.2'
-    //testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'
-
 }
 
 tasks.withType(JavaCompile) {
